chore: internal map files api
